--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.1",
+    "electron-store": "^10.0.1",
     "quill": "^2.0.3",
     "sqlite3": "^5.1.7"
   }
