--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "make": "electron-forge make"
   },
   "author": "Alfredo Rolim Pereira",
-  "license": "ISC",
+  "license": "LGPL-2.1-or-later",
   "devDependencies": {
     "@electron-forge/cli": "^7.7.0",
     "@electron-forge/maker-deb": "^7.7.0",
