--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^10.0.1",
+    "jsdom": "^26.0.0",
     "sqlite3": "^5.1.7"
   }
 }
