adiciona opção para remover dados do aplicativo padrão e corrige nome do pacote para "Templates"

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "templates",
+  "name": "Templates",
   "version": "0.1.0",
   "description": "Aplicativo desktop para armazenamento, edição e utilização de modelos de decisões e outros documentos utilizados em processos judiciais.",
   "main": "main.js",
